# qavif-viewer

./: .gitignore  CMakeLists.txt  Dockerfile  Image.h  LICENSE  README.md  app_en_US.qm  app_en_US.ts  app_zh_CN.qm  app_zh_CN.ts  check_sdl_pinch.cpp  convertsettings.cpp  convertsettings.h  dialogsettings.cpp  dialogsettings.h  dialogsettings.ui  imageview.cpp  imageview.h  imgconvsettings.cpp  imgconvsettings.h  imgui.ini  jpegavifconverter.cpp  jpegavifconverter.h  jpegheaderreader.cpp  jpegheaderreader.h  jpegsegreader.cpp  jpegsegreader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsview.cpp  mygraphicsview.h  myimagereader.cpp  myimagereader.h  qavif-viewer.pro  resouce.qrc  vcpkg.json
.github/workflows/: build.yml
